# Convivial-Medicine

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: phase1-fixture-workflow.md  phase1-orientation.md  source-boundaries.md
docs/orchestration/: branch-report-template.md
manifests/: vitamin_D_ms_seed_v1.json
migrations/: env.py
migrations/versions/: 20260701_0001_schema_v1.py
src/convivial_medicine/: __init__.py  config.py
src/convivial_medicine/adapters/pmc/: bioc.py  (+6 more)
src/convivial_medicine/api/: main.py
src/convivial_medicine/cli/: main.py
src/convivial_medicine/domain/: canonical_json.py  hashes.py  identifiers.py  manifests.py
src/convivial_medicine/orchestration/: __init__.py  audit.py  build_report.py  seed.py  slice_export.py  validation.py  work_normalization.py
src/convivial_medicine/storage/: artifacts.py  constants.py  db.py  models.py  object_store.py  repositories.py
tests/integration/: test_database_schema.py  test_imports.py  test_openalex_persistence.py  test_pmc_bioc_persistence.py  test_pmc_idconv_persistence.py  test_pubmed_esearch_persistence.py  test_seed_runner_persistence.py  test_work_normalization.py
tests/unit/: test_artifacts.py  test_cli.py  test_config.py  test_hashes.py  test_openalex_work.py  test_pmc_bioc.py  test_pmc_idconv.py  test_pubmed_efetch.py  test_pubmed_esearch.py  test_pubmed_esummary.py  test_schema_migration.py  test_seed_runner.py  test_storage_constants.py  test_storage_db.py  test_storage_models.py  test_storage_repositories.py
(+22 files in other folders)
