[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convivial-medicine"
version = "0.1.0"
description = "Reproducible biomedical corpus constructor rails for Convivial Medicine."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Convivial Medicine contributors" }]
dependencies = [
    "alembic>=1.13",
    "boto3>=1.34",
    "fastapi>=0.115",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
corpus = "convivial_medicine.cli.main:app"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/convivial_medicine"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["convivial_medicine"]
warn_unused_ignores = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "--cov=convivial_medicine --cov-report=term-missing"
testpaths = ["tests"]
